Edited pyofwave_client/pyofwave_client/pygowave_client.html via GitHub

--- a/pyofwave_client/pyofwave_client/pygowave_client.html
+++ b/pyofwave_client/pyofwave_client/pygowave_client.html
@@ -1,8 +1,8 @@
-<!--HTML for debugging-->
+<!--HTML for debugging, we assume the browser fully supports XML, so we can self-close.-->
 <html>
 <head>
-   <title>PyGoWave</title>
+   <title>PyOfWave</title>
+   <script type="text/javascript" src="pygowave_client.js" />
 </head>
-<body>
-</body>
+<body id="client" />
 </html>
