Edited pyofwave_client/pyofwave_client/pyofwave_client.html via GitHub

--- a/pyofwave_client/pyofwave_client/pyofwave_client.html
+++ b/pyofwave_client/pyofwave_client/pyofwave_client.html
@@ -1,4 +1,5 @@
-<!--HTML for debugging, we assume the browser fully supports XML, so we can self-close.-->
+<!--HTML for the WaveUI to be embedded in, we assume the browser fully supports XML, so we can self-close.
+Providers are encouraged to add their own frame here. -->
 <html>
 <head>
    <title>PyOfWave</title>
