Adding steal() calls to import files in client.

--- a/pyofwave_client/index.html
+++ b/pyofwave_client/index.html
@@ -12,7 +12,7 @@
       </tr>
       <tr>
          <th>Password</th>
-         <td><input type="password" name="password" value="=" /></td>
+         <td><input type="password" name="password" value="" /></td>
       </tr>
       <tr> <th></th>
          <td><input type="submit" value="Login" /></td>
