--- a/pyofwave_client/pyofwave_client/pyofwave_client.html
+++ b/pyofwave_client/pyofwave_client/pyofwave_client.html
@@ -3,6 +3,7 @@ Providers are encouraged to add their own frame here. -->
 <html>
 <head>
    <title>PyOfWave</title>
+   <script type="text/javascript" src="../api/steal/steal.production.js" />
    <script type="text/javascript" src="pyofwave_client.js" />
 </head>
 <body id="client" />
