Edited pyofwave_client/pyofwave_client/wave.html via GitHub

--- a/pyofwave_client/pyofwave_client/wave.html
+++ b/pyofwave_client/pyofwave_client/wave.html
@@ -6,11 +6,9 @@
 <script type="text/javascript" src="wave.js" />
 </head>
 <body>
-<div id="client-toolbar">
-   <div id="wave-participants" />
-</div>
 <div id="client-wave">
    <div id="wave-toolbar" />
+   <div id="wave-root" />
 </div>
 </body>
 </html>
