Creating a simpler API for widgets in this case. (With customised engine).

--- a/pyofwave_client/pyofwave_client/pygowave_client.html
+++ b/pyofwave_client/pyofwave_client/pygowave_client.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>PyOfWave</title>
-   <script type="text/javascript" src="pygowave_client.js" />
+   <script type="text/javascript" src="../api/steal/steal.js?pygowave_client.js" />
 </head>
 <body id="client" />
 </html>
