Few more adjustments on the homepage.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>alcinnz/PyOfWave @ GitHub</title>
+  <title>PyOfWave</title>
 
   <style type="text/css">
     .footer { text-align:center; padding-top:30px; font-style: italic; }
@@ -37,7 +37,7 @@
 
 <h2>Authors</h2>
 <p>Adrian "alcinnz" Cochrane (alcinnz@eml.cc)</p>
-<p>knygar Deserves acknowledgement for his undieing support of PyOfWave, as well as his effort in promoting the project and providing branding.</p>
+<p>Knygar Deserves acknowledgement for his undieing support of PyOfWave, as well as his effort in promoting the project and providing branding.</p>
 
     <div class="footer">
       &copy;2011 Adrian Cochrane Licensed under the Mozilla Public License
