--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="container">
     <p>PyOfWave is an implementation of Google-designed Wave communication platform (a merge of eMail, wiki, IM, and forums) built upon Twisted Python. </p>
 <p>It comes with a jQuery/JavaScriptMVC web client to add to your site.</p>
-<p>It is the active branch of the PyGoWave client.</p>
+<p>It is the active branch of the PyGoWave client, but is not functioning fully yet.</p>
 <h2>Dependencies</h2>
 <ul>
 <li>Python 2.7+</li>
