--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>PyOfWave</title>
 
   <style type="text/css">
+    ul.nav {width : 50%; float : right;}
+    ul.nav li {display : inline; list-style-marker : none;}
+
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
 </head>
