--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PyOfWave</title>
 
   <style type="text/css">
-    ul#nav {width : 50%; float : right;}
+    ul#nav {width : 50%; float : right; text-align:right;}
     ul#nav li {display : inline; list-style-marker : none;}
 
     .footer { text-align:center; padding-top:30px; font-style: italic; }
@@ -15,8 +15,6 @@
 
 <body>
   <header>
-    <h1>PyOfWave</h1>
-
     <ul id="nav">
       <li class="current">Home</li>
       <li><a href="about/" title="About PyOfWave">About</a></li>
@@ -26,6 +24,8 @@
       <li><a href="http://github.com/alcinnz/PyOfWave/zipball/masterz" title="Download PyOfWave Server and Web Client">Download</a></li>
       <li><a href="demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
     </ul>
+
+    <h1>PyOfWave</h1>
   </header>
 
   <div id="container">
