--- a/demo/index.html
+++ b/demo/index.html
@@ -17,12 +17,12 @@
   <header>
     <ul id="nav">
       <li class="current">Home</li>
-      <li><a href="about/" title="About PyOfWave">About</a></li>
+      <li><a href="about/index.html" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
-      <li><a href="docs/" title="PyOfWave Documentation">Documentation</a></li>
+      <li><a href="docs/index.html" title="PyOfWave Documentation">Documentation</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
       <li><a href="http://github.com/alcinnz/PyOfWave/zipball/masterz" title="Download PyOfWave Server and Web Client">Download</a></li>
-      <li><a href="demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
+      <li><a href="demo/index.html" title="Demo PyOfWave (to be provided)">Demo</a></li>
     </ul>
 
     <h1>PyOfWave</h1>
