--- a/demo/index.html
+++ b/demo/index.html
@@ -5,24 +5,19 @@
 
   <title>PyOfWave | demo (to be provided)</title>
 
-  <style type="text/css">
-    ul#nav {width : 50%; float : right; text-align:right;}
-    ul#nav li {display : inline; list-style-marker : none;}
-
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+  <link href="/site.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
   <header>
     <ul id="nav">
-      <li class="current">Home</li>
+      <li><a href="/" title="Back to homepage">Home</a></li>
       <li><a href="/about/index.html" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
       <li><a href="/docs/index.html" title="PyOfWave Documentation">Documentation</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
       <li><a href="http://github.com/alcinnz/PyOfWave/zipball/masterz" title="Download PyOfWave Server and Web Client">Download</a></li>
-      <li><a href="/demo/index.html" title="Demo PyOfWave (to be provided)">Demo</a></li>
+      <li class="current">Demo</li>
     </ul>
 
     <h1>PyOfWave</h1>
