Correcting external stylesheet for desktop demo.

--- a/sketches/desktop/index.html
+++ b/sketches/desktop/index.html
@@ -36,7 +36,7 @@ $().ready(function() {
 	$('#client #inboxes .content').treeview();
 });
 </script>
-<link href="/" rel="stylesheet" type="text/css"/>
+<link href="/site.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
