Adding finishing touches to the desktop sketch.

--- a/sketches/desktop/index.html
+++ b/sketches/desktop/index.html
@@ -53,7 +53,7 @@ $().ready(function() {
 <body>
 
 <header>
-<!--    <ul id="nav">
+    <ul id="nav">
       <li>Home</li>
       <li><a href="about/" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
@@ -62,7 +62,7 @@ $().ready(function() {
       <li><a href="http://github.com/alcinnz/PyOfWave/zipball/masterz" title="Download PyOfWave Server and Web Client">Download</a></li>
       <li class="current">Demo</li>
       <li><a href="logout.html" title="logout of your demo Wave account">Log Out</a></li>
-    </ul> -->
+    </ul>
 
 
 	<img src="img/logo.png" alt="PyOfWave logo"/>
