Adding a wave display concept.

--- a/sketches/desktop/index.html
+++ b/sketches/desktop/index.html
@@ -71,7 +71,6 @@ $().ready(function() {
 <div id="client">
 
   <section id="inboxes">
-	<div class="wrapper">
 	<aside>
 		<form><input type="search" id="srch_fld" autosave="bsn_srch" results="5" />
 		</form>
@@ -88,7 +87,6 @@ $().ready(function() {
 			</ul></li>
 		</ul></li>
 	</ul>
-	</div>
         <aside class="buttons bottom">
 		<a class="add left" title="Add new folder. . ."></a>
 		<a class="remove left" title="Remove selected folder"></a>
@@ -96,7 +94,7 @@ $().ready(function() {
 	</aside>
   </section> 
   
-  <div id="wave-views" class="wrapper">
+  <div id="wave-views">
   <section id="wavelist">
 	<aside class="buttons">
 		<a class="add left" title="Create new wave"></a>
