Adding borders to wave sketch.

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -5,6 +5,12 @@
    <meta http-equiv="Content-Language" content="en"/>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
    <title>Wave</title>
+
+   <style type="text/css">
+      ul.ThreadView li {
+         border: 3px solid;
+      }
+   </style>
 </head>
 <body>
    <div class="WaveletView">
