Fixes to the wave borders in wave sketch.

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -7,8 +7,9 @@
    <title>Wave</title>
 
    <style type="text/css">
-      ul.ThreadView li {
+      ul.ThreadView > li {
          border: 3px solid;
+         border-radius: 10px;
       }
    </style>
 </head>
@@ -54,8 +55,8 @@
                   <div class="inner">
                      <p>Yet all the blips are held closely together, making a solid thread.</p>
                   </div>
-                  <ul class="ThreadView" style="border-color: #EFCC9C;">
-                     <li class="BlipView">
+                  <ul class="ThreadView">
+                     <li class="BlipView" style="border-color: #EFCC9C;" >
                         <div class="control">
                         </div>
                         <div class="inner">
