Fixing borders to be on the internal element in wave mockup.

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -7,9 +7,12 @@
    <title>Wave</title>
 
    <style type="text/css">
-      ul.ThreadView > li {
+      ul.ThreadView > li > .inner {
          border: 3px solid;
          border-radius: 10px;
+      }
+      ul.ThreadView > li.addBlip > .inner {
+         border-color: #ccc;
       }
    </style>
 </head>
