Moving the colours to the framed elements in the wave mockup.

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -29,19 +29,19 @@
 	<li class="add" title="Add Participant. . ."></li>
       </ul>
       <ul class="ThreadView">
-         <li class="BlipView" style="border-color: #EFCC9C;">
+         <li class="BlipView">
             <div class="control">
             </div>
-            <div class="inner">
+            <div class="inner" style="border-color: #EFCC9C;">
                <h1>POW Wave Display Mockup</h1>
                <p>Have you noticed that the frame surrounding this blip ("wave post") identifies it's last contributor. This makes for a lighter weight and more versitile design (especially with soft, rounded corners) for now the only dominant item contained inside the blip is it's content.</p>
                <p>Yet still we maintained all the metadata presented in Google Wave, and more. Miracle isn't it. I acknowledge <i>Edward Tufte</i>'s <u>Envisioning Information</u>.</p>
             </div>
             <ul class="ThreadView">
-               <li class="BlipView" style="border-color: #9CEFBD;">
+               <li class="BlipView">
                   <div class="control">
                   </div>
-                  <div class="inner">
+                  <div class="inner" style="border-color: #9CEFBD;">
                      <p>This is a blip in a thread. You notice that it is visually seperated from the last thread through use of padding?
                   </div>
                   <ul class="ThreadView">
@@ -52,17 +52,17 @@
                      </li>
                   </ul>
                </li>
-               <li class="BlipView" style="border-color: #9CA0EF;">
+               <li class="BlipView">
                   <div class="control">
                   </div>
-                  <div class="inner">
+                  <div class="inner" style="border-color: #9CA0EF;">
                      <p>Yet all the blips are held closely together, making a solid thread.</p>
                   </div>
                   <ul class="ThreadView">
-                     <li class="BlipView" style="border-color: #EFCC9C;" >
+                     <li class="BlipView">
                         <div class="control">
                         </div>
-                        <div class="inner">
+                        <div class="inner" style="border-color: #EFCC9C;">
                            <p>And another layer in, so as to show that embedded comments work well. Don't they?</p>
                         </div>
                         <ul class="ThreadView">
@@ -87,10 +87,10 @@
                </li>
             </ul>
          </li>
-         <li class="BlipView" style="border-color: #9CA0EF;">
+         <li class="BlipView">
             <div class="control">
             </div>
-            <div class="inner">
+            <div class="inner" style="border-color: #9CA0EF;">
                <p>We have also avoided breaks in reading, for the Apple HIG said "Only show the user what they want to see" and Edward Tufte consoles to keep comparible items within an eyespan. Don't you prefer it?</p>
                <p class="p">And while I've got a wave here, I'd like to take the time to say that when we demo PyOfWave, we'll use it for all communication. In particular:</p>
                <ul>
