Removing bullets and filling in control panels in wave display sketch.

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -7,6 +7,9 @@
    <title>Wave</title>
 
    <style type="text/css">
+      ul.ThreadView > li {
+         list-style-type: none;
+      }
       ul.ThreadView > li > .inner {
          border: 3px solid;
          border-radius: 10px;
@@ -31,6 +34,11 @@
       <ul class="ThreadView">
          <li class="BlipView">
             <div class="control">
+               <time>09:23:30 21/12/2012</time>
+               <ul class="parts">
+               <li style="background-color: #EFCC9C;"></li>
+               <li style="background-color: #9CEFBD;"></li>
+               </ul>
             </div>
             <div class="inner" style="border-color: #EFCC9C;">
                <h1>POW Wave Display Mockup</h1>
@@ -40,6 +48,10 @@
             <ul class="ThreadView">
                <li class="BlipView">
                   <div class="control">
+                     <time>09:23:30 22/12/2012</time>
+                     <ul class="parts">
+                     <li style="background-color: #9CEFBD;"></li>
+                     </ul>
                   </div>
                   <div class="inner" style="border-color: #9CEFBD;">
                      <p>This is a blip in a thread. You notice that it is visually seperated from the last thread through use of padding?
@@ -54,6 +66,10 @@
                </li>
                <li class="BlipView">
                   <div class="control">
+                     <time>09:23:30 23/12/2012</time>
+                     <ul class="parts">
+                     <li style="background-color: #9CA0EF;"></li>
+                     </ul>
                   </div>
                   <div class="inner" style="border-color: #9CA0EF;">
                      <p>Yet all the blips are held closely together, making a solid thread.</p>
@@ -61,6 +77,10 @@
                   <ul class="ThreadView">
                      <li class="BlipView">
                         <div class="control">
+                           <time>09:23:30 30/12/2012</time>
+                           <ul class="parts">
+                           <li style="background-color: #9CA0EF;"></li>
+                           </ul>
                         </div>
                         <div class="inner" style="border-color: #EFCC9C;">
                            <p>And another layer in, so as to show that embedded comments work well. Don't they?</p>
@@ -89,6 +109,10 @@
          </li>
          <li class="BlipView">
             <div class="control">
+               <time>09:23:30 21/12/2012</time>
+               <ul class="parts">
+               <li style="background-color: #9CA0EF;"></li>
+               </ul>
             </div>
             <div class="inner" style="border-color: #9CA0EF;">
                <p>We have also avoided breaks in reading, for the Apple HIG said "Only show the user what they want to see" and Edward Tufte consoles to keep comparible items within an eyespan. Don't you prefer it?</p>
