--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -17,6 +17,17 @@
       ul.ThreadView > li.addBlip > .inner {
          border-color: #ccc;
       }
+
+      /* control panels */
+      .control {
+         width: 20px;
+         float: right;
+      }
+      .control .parts li {
+         width: 5px;
+         display: inline;
+         padding: 3px;
+      }
    </style>
 </head>
 <body>
@@ -48,7 +59,7 @@
             <ul class="ThreadView">
                <li class="BlipView">
                   <div class="control">
-                     <time>09:23:30 22/12/2012</time>
+                     <time>10:24:31 22/12/2012</time>
                      <ul class="parts">
                      <li style="background-color: #9CEFBD;"></li>
                      </ul>
@@ -66,7 +77,7 @@
                </li>
                <li class="BlipView">
                   <div class="control">
-                     <time>09:23:30 23/12/2012</time>
+                     <time>11:25:32 23/12/2012</time>
                      <ul class="parts">
                      <li style="background-color: #9CA0EF;"></li>
                      </ul>
@@ -77,7 +88,7 @@
                   <ul class="ThreadView">
                      <li class="BlipView">
                         <div class="control">
-                           <time>09:23:30 30/12/2012</time>
+                           <time>12:26:33 30/12/2012</time>
                            <ul class="parts">
                            <li style="background-color: #9CA0EF;"></li>
                            </ul>
@@ -109,7 +120,7 @@
          </li>
          <li class="BlipView">
             <div class="control">
-               <time>09:23:30 21/12/2012</time>
+               <time>09:23:30 1/01/2013</time>
                <ul class="parts">
                <li style="background-color: #9CA0EF;"></li>
                </ul>
