Fixing the panel positioning in the wave display sketch.

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -21,7 +21,8 @@
       /* control panels */
       .control {
          width: 20px;
-         float: right;
+         position: absolute;
+         right: 1px;
       }
       .control .parts li {
          width: 5px;
