Edited sketches/desktop/index.html via GitHub

--- a/sketches/desktop/index.html
+++ b/sketches/desktop/index.html
@@ -252,7 +252,7 @@ $().ready(function() {
 	<div class="wrapper">
 	<aside>
 		<div class="buttons">
-			<a class="view right" title="View this wave in a new window" href="wave.html"></a>
+			<a class="view right" title="View this wave in a new window" target="__new__" href="wave.html"></a>
 			<a class="play right" title="Playback this wave"></a>
 		</div>
 
